--- a/taylorizer/manifest.json
+++ b/taylorizer/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Taylorizer",
+  "name": "Generate Taylor Swift songs with AI",
   "icons": [
     {
       "src": "favicon.ico",
